[package]
name = "short-url"
version = "1.0.0"
authors = ["Sougata Bhattacharjee <sougata.bhbattacharjee94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nanoid = "0.4.0"
clap = "2.31.2"
actix-web = "3.3.2"
serde = "1.0.125"
